--- a/index.html
+++ b/index.html
@@ -384,13 +384,13 @@
                     <form class="form" id="form" name="form" action="#" method="POST">
                         <label class="form__label">
                             <input type="text" class="input name" name="name" value="" minlength="3" maxlength="20"
-                               >
+                               required>
                             <span class="input__title">Ваше имя</span>
                             <span class="input__error input__error-name"></span>
                         </label>
                         <label class="form__label">
 
-                            <input type="email" class="input mail" name="email" value="">
+                            <input type="email" class="input mail" name="email" value="" required>
                             <span class="input__title">Ваш e-mail*</span>
                             <span class="input__error input__error-mail"></span>
                         </label>
@@ -398,7 +398,7 @@
                         <label class="form__label">
 
                             <textarea name="textarea" class="textarea input" cols="30" rows="7" name="mess"
-                                value=""></textarea>
+                                value="" required></textarea>
                             <span class="input__title">Описание задач</span>
                             <span class="input__error"></span>
                         </label>
