--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
         <div class="container partners">
             <div class="main__partners">
                 <p class="main__partners-title">Партнеры:</p>
-                <img src="/img/main-bitrix.png" alt="bitrix">
-                <img src="/img/main-1cbitrix.png" alt="1cbitrix">
+                <img src="img/main-bitrix.png" alt="bitrix">
+                <img src="img/main-1cbitrix.png" alt="1cbitrix">
             </div>
         </div>
     </section>
@@ -124,11 +124,11 @@
                         некорректно ее поняли.</p>
 
                     <div class="about__img">
-                        <img src="/img/about-img1.jpg" alt="о нас">
-                        <img src="/img/about-img2.jpg" alt="о нас">
+                        <img src="img/about-img1.jpg" alt="о нас">
+                        <img src="img/about-img2.jpg" alt="о нас">
                     </div>
                 </div>
-                <img class="about__foto" src="/img/about-img3.jpg">
+                <img class="about__foto" src="img/about-img3.jpg">
             </div>
         </div>
     </section>
@@ -146,52 +146,52 @@
 
             <div class="services__items">
                 <a href="#" class="services__item">
-                    <img src="/img/services1.svg" alt="Оптимизировать верстку">
+                    <img src="img/services1.svg" alt="Оптимизировать верстку">
                     <p class="services__item-text">
                         Оптимизировать верстку<br>
                     </p>
                 </a>
                 <a href="#" class="services__item">
-                    <img src="/img/services2.svg" alt="Оптимизировать верстку">
+                    <img src="img/services2.svg" alt="Оптимизировать верстку">
                     <p class="services__item-text">
                         Создать страницы<br>
                     </p>
                 </a>
                 <a href="#" class="services__item">
-                    <img src="/img/services3.svg" alt="Оптимизировать верстку">
+                    <img src="img/services3.svg" alt="Оптимизировать верстку">
                     <p class="services__item-text">
                         Адаптировать
                         содержание<br>
                     </p>
                 </a>
                 <a href="#" class="services__item">
-                    <img src="/img/services4.svg" alt="Оптимизировать верстку">
+                    <img src="img/services4.svg" alt="Оптимизировать верстку">
                     <p class="services__item-text">
                         Настроить
                         интеграцию<br>
                     </p>
                 </a>
                 <a href="#" class="services__item">
-                    <img src="/img/services5.svg" alt="Оптимизировать верстку">
+                    <img src="img/services5.svg" alt="Оптимизировать верстку">
                     <p class="services__item-text">
                         Модернизировать сайт<br>
                     </p>
                 </a>
                 <a href="#" class="services__item">
-                    <img src="/img/services6.svg" alt="Оптимизировать верстку">
+                    <img src="img/services6.svg" alt="Оптимизировать верстку">
                     <p class="services__item-text">
                         Исправить
                         ошибки<br>
                     </p>
                 </a>
                 <a href="#" class="services__item">
-                    <img src="/img/services7.svg" alt="Оптимизировать верстку">
+                    <img src="img/services7.svg" alt="Оптимизировать верстку">
                     <p class="services__item-text">
                         Разработать функционал<br>
                     </p>
                 </a>
                 <a href="#" class="services__item">
-                    <img src="/img/services8.svg" alt="Оптимизировать верстку">
+                    <img src="img/services8.svg" alt="Оптимизировать верстку">
                     <p class="services__item-text">
                         Обновить систему<br>
                     </p>
@@ -215,7 +215,7 @@
                     <div class="swiper-slide">
                         <div class="news-card">
                             <div class="news-card__image">
-                                <img src="/img/news-3.jpg" alt="новость1">
+                                <img src="img/news-3.jpg" alt="новость1">
                             </div>
                             <div class="news-card__content">
                                 <a href="#" class="news-card__link" target="_blank">Как мы подбираем людей для
@@ -226,7 +226,7 @@
                                 </div>
                                 <div class="news-card__bottom">
                                     <div class="news-card__bottom-logo">
-                                        <img src="/img/logo-cossa.png" alt="cossa">
+                                        <img src="img/logo-cossa.png" alt="cossa">
                                     </div>
                                     <div class="news-card__bottom-date">1 апреля 2024</div>
                                 </div>
@@ -236,7 +236,7 @@
                     <div class="swiper-slide">
                         <div class="news-card">
                             <div class="news-card__image">
-                                <img src="/img/news-1.jpg" alt="новость1">
+                                <img src="img/news-1.jpg" alt="новость1">
                             </div>
                             <div class="news-card__content">
                                 <a href="#" class="news-card__link" target="_blank">Как мы подбираем людей для
@@ -249,32 +249,7 @@
 
                                 <div class="news-card__bottom">
                                     <div class="news-card__bottom-logo">
-                                        <img src="/img/logo-blue.png" alt="manao">
-                                    </div>
-                                    <div class="news-card__bottom-date">1 апреля 2024</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-
-                    <div class="swiper-slide">
-                        <div class="news-card">
-                            <div class="news-card__image">
-                                <img src="/img/news-2.jpg" alt="новость1">
-                            </div>
-                            <div class="news-card__content">
-                                <a href="#" class="news-card__link" target="_blank">Как мы подбираем людей для
-                                    аутсорс-продакшна</a>
-                                <div class="news-card__text">
-                                    <p>Реализация дополнительного поля для элементов, которое генерируется по
-                                        определенным правилам (как SEO поля).</p>
-                                </div>
-
-
-                                <div class="news-card__bottom">
-                                    <div class="news-card__bottom-logo">
-                                        <img src="/img/logo-cossa.png" alt="cossa">
+                                        <img src="img/logo-blue.png" alt="manao">
                                     </div>
                                     <div class="news-card__bottom-date">1 апреля 2024</div>
                                 </div>
@@ -286,7 +261,7 @@
                     <div class="swiper-slide">
                         <div class="news-card">
                             <div class="news-card__image">
-                                <img src="/img/news-3.jpg" alt="новость1">
+                                <img src="img/news-2.jpg" alt="новость1">
                             </div>
                             <div class="news-card__content">
                                 <a href="#" class="news-card__link" target="_blank">Как мы подбираем людей для
@@ -299,7 +274,32 @@
 
                                 <div class="news-card__bottom">
                                     <div class="news-card__bottom-logo">
-                                        <img src="/img/logo-cossa.png" alt="cossa">
+                                        <img src="img/logo-cossa.png" alt="cossa">
+                                    </div>
+                                    <div class="news-card__bottom-date">1 апреля 2024</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="swiper-slide">
+                        <div class="news-card">
+                            <div class="news-card__image">
+                                <img src="img/news-3.jpg" alt="новость1">
+                            </div>
+                            <div class="news-card__content">
+                                <a href="#" class="news-card__link" target="_blank">Как мы подбираем людей для
+                                    аутсорс-продакшна</a>
+                                <div class="news-card__text">
+                                    <p>Реализация дополнительного поля для элементов, которое генерируется по
+                                        определенным правилам (как SEO поля).</p>
+                                </div>
+
+
+                                <div class="news-card__bottom">
+                                    <div class="news-card__bottom-logo">
+                                        <img src="img/logo-cossa.png" alt="cossa">
                                     </div>
                                     <div class="news-card__bottom-date">1 апреля 2024</div>
                                 </div>
@@ -532,13 +532,13 @@
 
             <div class="footer__bottom">
                 <div class="footer__payment">
-                    <img src="/img/2.svg" alt="Visa secure">
-                    <img src="/img/3.svg" alt="Visa secure">
-                    <img src="/img/4.svg" alt="Visa secure">
-                    <img src="/img/5.svg" alt="Visa secure">
-                    <img src="/img/6.svg" alt="Visa secure">
-                    <img src="/img/7.svg" alt="Visa secure">
-                    <img src="/img/8.svg" alt="Visa secure">
+                    <img src="img/2.svg" alt="Visa secure">
+                    <img src="img/3.svg" alt="Visa secure">
+                    <img src="img/4.svg" alt="Visa secure">
+                    <img src="img/5.svg" alt="Visa secure">
+                    <img src="img/6.svg" alt="Visa secure">
+                    <img src="img/7.svg" alt="Visa secure">
+                    <img src="img/8.svg" alt="Visa secure">
                 </div>
                 <div class="footer__politics">
                     <a target="_blank" href="/upload/Согласие на обработку персональных данных.pdf">Политика обработки
